// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`index export modules for index 1`] = `
Object {
  "AnimatedSprite": "AnimatedSprite",
  "AppConsumer": Object {
    "$$typeof": Symbol(react.context),
    "_calculateChangedBits": null,
    "_context": Object {
      "$$typeof": Symbol(react.context),
      "Consumer": [Circular],
      "Provider": Object {
        "$$typeof": Symbol(react.provider),
        "_context": [Circular],
      },
      "_calculateChangedBits": null,
      "_currentRenderer": null,
      "_currentRenderer2": null,
      "_currentValue": null,
      "_currentValue2": null,
      "_threadCount": 0,
    },
  },
  "AppContext": Object {
    "$$typeof": Symbol(react.context),
    "Consumer": Object {
      "$$typeof": Symbol(react.context),
      "_calculateChangedBits": null,
      "_context": [Circular],
    },
    "Provider": Object {
      "$$typeof": Symbol(react.provider),
      "_context": [Circular],
    },
    "_calculateChangedBits": null,
    "_currentRenderer": null,
    "_currentRenderer2": null,
    "_currentValue": null,
    "_currentValue2": null,
    "_threadCount": 0,
  },
  "AppProvider": Object {
    "$$typeof": Symbol(react.provider),
    "_context": Object {
      "$$typeof": Symbol(react.context),
      "Consumer": Object {
        "$$typeof": Symbol(react.context),
        "_calculateChangedBits": null,
        "_context": [Circular],
      },
      "Provider": [Circular],
      "_calculateChangedBits": null,
      "_currentRenderer": null,
      "_currentRenderer2": null,
      "_currentValue": null,
      "_currentValue2": null,
      "_threadCount": 0,
    },
  },
  "BitmapText": "BitmapText",
  "Container": "Container",
  "Graphics": "Graphics",
  "NineSlicePlane": "NineSlicePlane",
  "ParticleContainer": "ParticleContainer",
  "PixiComponent": [Function],
  "PixiFiber": Object {
    "IsThisRendererActing": Object {
      "current": false,
    },
    "act": [Function],
    "attemptContinuousHydration": [Function],
    "attemptHydrationAtCurrentPriority": [Function],
    "attemptSynchronousHydration": [Function],
    "attemptUserBlockingHydration": [Function],
    "batchedEventUpdates": [Function],
    "batchedUpdates": [Function],
    "createComponentSelector": [Function],
    "createContainer": [Function],
    "createHasPsuedoClassSelector": [Function],
    "createPortal": [Function],
    "createRoleSelector": [Function],
    "createTestNameSelector": [Function],
    "createTextSelector": [Function],
    "deferredUpdates": [Function],
    "discreteUpdates": [Function],
    "findAllNodes": [Function],
    "findBoundingRects": [Function],
    "findHostInstance": [Function],
    "findHostInstanceWithNoPortals": [Function],
    "findHostInstanceWithWarning": [Function],
    "flushControlled": [Function],
    "flushDiscreteUpdates": [Function],
    "flushPassiveEffects": [Function],
    "flushSync": [Function],
    "focusWithin": [Function],
    "getCurrentUpdateLanePriority": [Function],
    "getFindAllNodesFailureDescription": [Function],
    "getPublicRootInstance": [Function],
    "injectIntoDevTools": [Function],
    "observeVisibleRects": [Function],
    "registerMutableSourceForHydration": [Function],
    "runWithPriority": [Function],
    "shouldSuspend": [Function],
    "unbatchedUpdates": [Function],
    "updateContainer": [Function],
  },
  "SimpleMesh": "SimpleMesh",
  "SimpleRope": "SimpleRope",
  "Sprite": "Sprite",
  "Stage": [Function],
  "Text": "Text",
  "TilingSprite": "TilingSprite",
  "applyDefaultProps": [Function],
  "eventHandlers": Array [
    "click",
    "mousedown",
    "mousemove",
    "mouseout",
    "mouseover",
    "mouseup",
    "mouseupoutside",
    "tap",
    "touchstart",
    "touchmove",
    "touchend",
    "touchendoutside",
    "pointercancel",
    "pointerout",
    "pointerover",
    "pointertap",
    "pointerdown",
    "pointerup",
    "pointerupoutside",
    "pointermove",
    "rightclick",
    "rightdown",
    "rightup",
    "rightupoutside",
    "touchcancel",
    "touchendoutside",
    "touchmove",
    "touchstart",
  ],
  "render": [Function],
  "unmountComponentAtNode": [Function],
  "useApp": [Function],
  "useTick": [Function],
  "withFilters": [Function],
  "withPixiApp": [Function],
}
`;

exports[`index export modules for react-spring 1`] = `
Object {
  "AnimatedSprite": Object {
    "$$typeof": Symbol(react.forward_ref),
    "render": [Function],
  },
  "AppConsumer": Object {
    "$$typeof": Symbol(react.context),
    "_calculateChangedBits": null,
    "_context": Object {
      "$$typeof": Symbol(react.context),
      "Consumer": [Circular],
      "Provider": Object {
        "$$typeof": Symbol(react.provider),
        "_context": [Circular],
      },
      "_calculateChangedBits": null,
      "_currentRenderer": null,
      "_currentRenderer2": null,
      "_currentValue": null,
      "_currentValue2": null,
      "_threadCount": 0,
    },
  },
  "AppContext": Object {
    "$$typeof": Symbol(react.context),
    "Consumer": Object {
      "$$typeof": Symbol(react.context),
      "_calculateChangedBits": null,
      "_context": [Circular],
    },
    "Provider": Object {
      "$$typeof": Symbol(react.provider),
      "_context": [Circular],
    },
    "_calculateChangedBits": null,
    "_currentRenderer": null,
    "_currentRenderer2": null,
    "_currentValue": null,
    "_currentValue2": null,
    "_threadCount": 0,
  },
  "AppProvider": Object {
    "$$typeof": Symbol(react.provider),
    "_context": Object {
      "$$typeof": Symbol(react.context),
      "Consumer": Object {
        "$$typeof": Symbol(react.context),
        "_calculateChangedBits": null,
        "_context": [Circular],
      },
      "Provider": [Circular],
      "_calculateChangedBits": null,
      "_currentRenderer": null,
      "_currentRenderer2": null,
      "_currentValue": null,
      "_currentValue2": null,
      "_threadCount": 0,
    },
  },
  "BitmapText": Object {
    "$$typeof": Symbol(react.forward_ref),
    "render": [Function],
  },
  "Container": Object {
    "$$typeof": Symbol(react.forward_ref),
    "render": [Function],
  },
  "Graphics": Object {
    "$$typeof": Symbol(react.forward_ref),
    "render": [Function],
  },
  "NineSlicePlane": Object {
    "$$typeof": Symbol(react.forward_ref),
    "render": [Function],
  },
  "ParticleContainer": Object {
    "$$typeof": Symbol(react.forward_ref),
    "render": [Function],
  },
  "PixiComponent": [Function],
  "PixiFiber": Object {
    "IsThisRendererActing": Object {
      "current": false,
    },
    "act": [Function],
    "attemptContinuousHydration": [Function],
    "attemptHydrationAtCurrentPriority": [Function],
    "attemptSynchronousHydration": [Function],
    "attemptUserBlockingHydration": [Function],
    "batchedEventUpdates": [Function],
    "batchedUpdates": [Function],
    "createComponentSelector": [Function],
    "createContainer": [Function],
    "createHasPsuedoClassSelector": [Function],
    "createPortal": [Function],
    "createRoleSelector": [Function],
    "createTestNameSelector": [Function],
    "createTextSelector": [Function],
    "deferredUpdates": [Function],
    "discreteUpdates": [Function],
    "findAllNodes": [Function],
    "findBoundingRects": [Function],
    "findHostInstance": [Function],
    "findHostInstanceWithNoPortals": [Function],
    "findHostInstanceWithWarning": [Function],
    "flushControlled": [Function],
    "flushDiscreteUpdates": [Function],
    "flushPassiveEffects": [Function],
    "flushSync": [Function],
    "focusWithin": [Function],
    "getCurrentUpdateLanePriority": [Function],
    "getFindAllNodesFailureDescription": [Function],
    "getPublicRootInstance": [Function],
    "injectIntoDevTools": [Function],
    "observeVisibleRects": [Function],
    "registerMutableSourceForHydration": [Function],
    "runWithPriority": [Function],
    "shouldSuspend": [Function],
    "unbatchedUpdates": [Function],
    "updateContainer": [Function],
  },
  "SimpleMesh": Object {
    "$$typeof": Symbol(react.forward_ref),
    "render": [Function],
  },
  "SimpleRope": Object {
    "$$typeof": Symbol(react.forward_ref),
    "render": [Function],
  },
  "Sprite": Object {
    "$$typeof": Symbol(react.forward_ref),
    "render": [Function],
  },
  "Stage": [Function],
  "Text": Object {
    "$$typeof": Symbol(react.forward_ref),
    "render": [Function],
  },
  "TilingSprite": Object {
    "$$typeof": Symbol(react.forward_ref),
    "render": [Function],
  },
  "applyDefaultProps": [Function],
  "eventHandlers": Array [
    "click",
    "mousedown",
    "mousemove",
    "mouseout",
    "mouseover",
    "mouseup",
    "mouseupoutside",
    "tap",
    "touchstart",
    "touchmove",
    "touchend",
    "touchendoutside",
    "pointercancel",
    "pointerout",
    "pointerover",
    "pointertap",
    "pointerdown",
    "pointerup",
    "pointerupoutside",
    "pointermove",
    "rightclick",
    "rightdown",
    "rightup",
    "rightupoutside",
    "touchcancel",
    "touchendoutside",
    "touchmove",
    "touchstart",
  ],
  "render": [Function],
  "unmountComponentAtNode": [Function],
  "useApp": [Function],
  "useTick": [Function],
  "withFilters": [Function],
  "withPixiApp": [Function],
}
`;
